# Consensus-distance

./: .gitignore  CMakeLists.txt  README.md  library.h  main.cpp
include/consensus_distance/: consensus_distance.h  paths_prefix_sum_arrays.h  prefix_sum_array.h  pruned_graph.h
src/: paths_prefix_sum_arrays.cpp  prefix_sum_array.cpp  pruned_graph.cpp
test/: acyclic_graph_even_paths.gfa  acyclic_graph_odd_paths.gfa  cyclic_graph_different_orientation_in_path.gfa  cyclic_graph_even_paths.gfa  cyclic_graph_odd_paths.gfa  one_node_acyclic.gfa  one_node_cyclic.gfa  test.cpp  test_prefix_sum_array.cpp
